--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bevy = "0.16"
+bevy_rapier3d = { version = "0.31", optional = true }
+avian3d = { version = "0.3", optional = true }
+
+[[bin]]
+name = "bevy-explorer"
+path = "src/main.rs"
+required-features = ["rapier"]
 
 # Cargo.toml
 [profile.dev]
